# Hyprlua

./: .luacheckrc  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README.md  config.ld  hyprpm.toml
runtime/: hyprlua.lua
runtime/libs/: logs.lua  utils.lua
runtime/modules/: binds.lua  exec.lua  monitors.lua
scripts/: bump-version.sh
src/: globals.cpp  globals.hpp  logger.hpp  main.cpp  utils.cpp  utils.hpp  watcher.cpp  watcher.hpp
src/lua/: exec.cpp  exec.hpp  keybinds.cpp  keybinds.hpp  monitors.cpp  monitors.hpp  runtime.cpp  runtime.hpp
tests/: run_all_tests.lua
tests/helpers/: mock.lua  setup.lua
tests/unit/: test_binds.lua  test_logs.lua  test_monitors.lua  test_utils.lua
